--- a/1_Expense_Tracker/Frontend/src/App.css
+++ b/1_Expense_Tracker/Frontend/src/App.css
@@ -15,7 +15,9 @@
   border:2px solid black;
   padding:30px;
   margin-top:30px;
+  margin-bottom: 30px;
   row-gap:20px;
+  box-shadow: 10px 10px 0px 0px rgba(0, 0, 0, 0.4);
 }
 .tracker-container
 {
