--- a/1_Expense_Tracker/Frontend/src/assets/components/History.module.css
+++ b/1_Expense_Tracker/Frontend/src/assets/components/History.module.css
@@ -24,6 +24,12 @@
   justify-content:space-between;
   background:white;
 }
+.listdiv
+{
+  flex:1;
+  display:flex;
+  flex-direction:row;
+}
 .title
 {
   flex:1;
